[project]
name = "abm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agentpy>=0.1.5",
    "altair>=5.5.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "mesa>=3.1.4",
    "networkx>=3.4.2",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "solara>=1.44.1",
]
